--- a/build.gradle
+++ b/build.gradle
@@ -21,11 +21,7 @@ version '0.0.1'
 sourceCompatibility = 1.8
 
 repositories {
-    maven {
-        url "http://testrepo.drwp.digitalriver.com/artifactory/libs-beta"
-    }
-    mavenCentral()
-
+    jcenter()
 }
 
 jar {
@@ -42,7 +38,7 @@ fatJar {
 }
 
 dependencies {
-    compile(group: 'drwp', name: 'PaymentAPI', version: '4.3.0-9b46a5')
+    compile 'com.worldline.payments:payment-api:4.3.0'
     compile 'net.sf.jopt-simple:jopt-simple:4.9'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
